--- a/NFlat/NFlat.csproj
+++ b/NFlat/NFlat.csproj
@@ -12,4 +12,9 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.2.0" />
+    <PackageReference Include="System.Memory" Version="4.5.2" />
+  </ItemGroup>
+
 </Project>
